--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -2,7 +2,6 @@
     width:100%;
     min-height: 100vh;
     background: linear-gradient(rgba(8,0,58,0.7), rgba(8,0,58,0.7)), url('../../assets/cover.jpeg') no-repeat center;
-
     background-size: cover;
     background-position: center;
     color:#fff;
@@ -13,7 +12,10 @@
 .hero-text{
     text-align: center;
     max-width: 800px;
-    margin-bottom: 150px;;
+    padding: 15px;
+    margin-bottom: -10px;
+    border-radius: 10px;
+    background-color: rgba(255, 0, 0, 0.5);
 }
 .hero-text h1{
     font-size: 60px;
